@@ -10,8 +10,8 @@ namespace xylib {
     class VamasDataSet : public DataSet
     {
     public:
-        VamasDataSet(std::istream &is, const std::string &filename = "")
-            : DataSet(is, FT_VAMAS, filename), include(40, false) {}
+        VamasDataSet(std::istream &is)
+            : DataSet(is, FT_VAMAS), include(40, false) {}
 
         // implement the interfaces specified by DataSet
         void load_data();
